testsuite/tests/deSugar/should_fail/DsStrictFail.hs
{-# LANGUAGE Strict, GHC2021 #-}
module Main where

main = let False = True
       in return ()
